{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 2796,
  "lineage": "a267791f-0a50-29ae-f493-f4798ebf6489",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "devop_administrator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:859324481407:instance/i-0d2cdda4c4a535c05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2cdda4c4a535c05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0986e9bd2e93d787b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0986e9bd2e93d787b",
            "private_dns": "ip-172-16-10-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.225",
            "public_dns": "ec2-3-87-125-248.compute-1.amazonaws.com",
            "public_ip": "3.87.125.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:859324481407:key/b8b8e7f6-a460-4b4f-9856-f8712b098316",
                "throughput": 0,
                "volume_id": "vol-00f11d816cde078a1",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-devops-administrator"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-devops-administrator"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b70fc7261e0fca71"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.mtc_auth",
            "aws_network_interface.devops_admin-interface",
            "aws_security_group.administrator_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:859324481407:instance/i-08b859a5303c1a2b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b859a5303c1a2b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-073395f7546e4c25d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073395f7546e4c25d",
            "private_dns": "ip-172-16-10-226.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.226",
            "public_dns": "ec2-34-227-227-149.compute-1.amazonaws.com",
            "public_ip": "34.227.227.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:859324481407:key/b8b8e7f6-a460-4b4f-9856-f8712b098316",
                "throughput": 0,
                "volume_id": "vol-0f8d21e2d2ec74060",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-jenkins"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5d3c7b32b26688e"
            ]
          },
          "dependencies": [
            "aws_key_pair.mtc_auth",
            "aws_network_interface.jenkins-interface",
            "aws_security_group.jenkins_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "waf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:859324481407:instance/i-028bc40922f2ba839",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-028bc40922f2ba839",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "dev-ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ee5ef39fbab986b0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee5ef39fbab986b0",
            "private_dns": "ip-172-16-10-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.227",
            "public_dns": "ec2-54-242-135-59.compute-1.amazonaws.com",
            "public_ip": "54.242.135.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:859324481407:key/b8b8e7f6-a460-4b4f-9856-f8712b098316",
                "throughput": 0,
                "volume_id": "vol-03c28899028f69a01",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-WAF"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WAF"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ab803d1689b2f06d"
            ]
          },
          "dependencies": [
            "aws_key_pair.mtc_auth",
            "aws_network_interface.waf-interface",
            "aws_security_group.waf_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005f9685cb30f234b",
            "arn": "arn:aws:ec2:us-east-1:859324481407:instance/i-0cd135269e8214e87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd135269e8214e87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-063bdcf605d0d8cd9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063bdcf605d0d8cd9",
            "private_dns": "ip-172-16-10-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.100",
            "public_dns": "ec2-54-89-199-94.compute-1.amazonaws.com",
            "public_ip": "54.89.199.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:859324481407:key/b8b8e7f6-a460-4b4f-9856-f8712b098316",
                "throughput": 0,
                "volume_id": "vol-0187e3ace6da28178",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-webserver-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-webserver-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a761423129e9b00"
            ]
          },
          "dependencies": [
            "aws_key_pair.mtc_auth",
            "aws_network_interface.web-server",
            "aws_security_group.webserver_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:internet-gateway/igw-0ef14300c8f26d844",
            "id": "igw-0ef14300c8f26d844",
            "owner_id": "859324481407",
            "tags": {
              "Name": "dev-GW-VPC"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "dev-GW-VPC"
            },
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "devops_admin-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:network-interface/eni-0986e9bd2e93d787b",
            "id": "eni-0986e9bd2e93d787b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:90:75:ea:3d:7d",
            "owner_id": "859324481407",
            "private_dns_name": "ip-172-16-10-225.ec2.internal",
            "private_ip": "172.16.10.225",
            "private_ip_list": [
              "172.16.10.225"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.225"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b70fc7261e0fca71"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-devops-admin-interface"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-devops-admin-interface"
            }
          },
          "dependencies": [
            "aws_security_group.administrator_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:network-interface/eni-073395f7546e4c25d",
            "id": "eni-073395f7546e4c25d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:6a:60:4a:b4:a9",
            "owner_id": "859324481407",
            "private_dns_name": "ip-172-16-10-226.ec2.internal",
            "private_ip": "172.16.10.226",
            "private_ip_list": [
              "172.16.10.226"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.226"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0b5d3c7b32b26688e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-jenkins-interface"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-jenkins-interface"
            }
          },
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "waf-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:network-interface/eni-0ee5ef39fbab986b0",
            "id": "eni-0ee5ef39fbab986b0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:25:87:24:4e:73",
            "owner_id": "859324481407",
            "private_dns_name": "ip-172-16-10-227.ec2.internal",
            "private_ip": "172.16.10.227",
            "private_ip_list": [
              "172.16.10.227"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.227"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ab803d1689b2f06d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-WAF-interface"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WAF-interface"
            }
          },
          "dependencies": [
            "aws_security_group.waf_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:network-interface/eni-063bdcf605d0d8cd9",
            "id": "eni-063bdcf605d0d8cd9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:1e:54:c5:cf:5d",
            "owner_id": "859324481407",
            "private_dns_name": "ip-172-16-10-100.ec2.internal",
            "private_ip": "172.16.10.100",
            "private_ip_list": [
              "172.16.10.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01a761423129e9b00"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1d098e051c4d75c",
            "tags": {
              "Environment": "dev",
              "Name": "dev-webserver-interface-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-webserver-interface-0"
            }
          },
          "dependencies": [
            "aws_security_group.webserver_sg",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webserver-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:route-table/rtb-0efccda086ef7306d",
            "id": "rtb-0efccda086ef7306d",
            "owner_id": "859324481407",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef14300c8f26d844",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-Router"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "dev-Router"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-vpc",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass-subnet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0699df501be3c8ceb",
            "route_table_id": "rtb-0efccda086ef7306d",
            "subnet_id": "subnet-0e1d098e051c4d75c"
          },
          "dependencies": [
            "aws_internet_gateway.gw-vpc",
            "aws_route_table.webserver-route-table",
            "aws_subnet.webserver_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administrator_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:security-group/sg-0b70fc7261e0fca71",
            "description": "Administrator DMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b70fc7261e0fca71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (22)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-Administrator-sg",
            "name_prefix": "",
            "owner_id": "859324481407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-Administrator-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-Administrator-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:security-group/sg-0b5d3c7b32b26688e",
            "description": "jenkins DMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5d3c7b32b26688e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (22)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube (9000)",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "dev-jenkins-sg",
            "name_prefix": "",
            "owner_id": "859324481407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-jenkins-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-jenkins-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "waf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:security-group/sg-0ab803d1689b2f06d",
            "description": "WAF DMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab803d1689b2f06d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Elasticsearch (9200)",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Elasticsearch (9300)",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Graylog (9000)",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB  (27017)",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (22)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-waf-sg",
            "name_prefix": "",
            "owner_id": "859324481407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-WAF-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-WAF-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:security-group/sg-01a761423129e9b00",
            "description": "WebServer DMZ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a761423129e9b00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH (22)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-webserver-sg",
            "name_prefix": "",
            "owner_id": "859324481407",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-webserver-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:subnet/subnet-0e1d098e051c4d75c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1d098e051c4d75c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "859324481407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-subnet-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0be7a3ff49fb19cfd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:859324481407:vpc/vpc-0be7a3ff49fb19cfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-00efc43f73158d3c8",
            "default_route_table_id": "rtb-0b0ca82d7c1707ef8",
            "default_security_group_id": "sg-02a0ed6129818a4cc",
            "dhcp_options_id": "dopt-0403cca95ce8ba35f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0be7a3ff49fb19cfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0ca82d7c1707ef8",
            "owner_id": "859324481407",
            "tags": {
              "Environment": "dev",
              "Name": "dev-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-VPC"
            }
          }
        }
      ]
    }
  ]
}